# familiar-classifier

./: .gitignore  Dockerfile  HIERARCHY_ANALYSIS.md  IMPLEMENTATION_OVERVIEW.md  README.md  SCHEMA_DRIVEN_BENEFITS.md  docker-compose.yml  pyproject.toml  start_system.sh
assets/: level_schemas_with_embeddings.json  patterns.json  patterns_with_embeddings.json  schemas.json
cold_path/: __init__.py  cli.py  level_loader.py  level_schemas.py  pattern_loader.py  schemas.py  vector_stores.py
cold_path/level_schemas/: child_development.yaml  outdoor.yaml  play.yaml  self_state.yaml  sleep.yaml
cold_path/patterns/child_development/play/outdoor/park/: afternoon.yaml
cold_path/patterns/child_development/sleep/bedtime/routine/: bath.yaml
cold_path/patterns/child_development/sleep/nap/crib/: early_am.yaml
cold_path/patterns/child_development/sleep/nap/crib/afternoon/: recurring.yaml
cold_path/patterns/examples/: flexibility_demo.yaml
cold_path/patterns/health/meals/lunch/outdoor/: picnic.yaml
cold_path/tools/: __init__.py  build_pattern_index.py
examples/: basic_usage.py
hot_path/: Cargo.toml  build.rs
hot_path/assets/: patterns_with_embeddings.json
hot_path/src/: classifier.rs  config.rs  embeddings.rs  generated.rs  lib.rs  main.rs  service.rs  stats.rs
scripts/: setup.sh  setup_native.sh
test_patterns/: full_hierarchy_example.yaml  temporal_analysis.yaml  test.yaml
tests/: test_integration.py  test_schema_bridge.py
ui/: README.md  __init__.py  app.py  requirements.txt  run_ui.py  schema_driven_ui.py
